# trends-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Cross.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml  release.yml.bak
.rpm/: strend.spec
src/: app.rs  event.rs  handler.rs  lib.rs  main.rs  test.rs  tui.rs  ui.rs  util.rs
src/components/: line_chart.rs  mod.rs  stateful_list.rs  user_input.rs
src/widgets/: list.rs
