[package]
name = "strend"
version = "0.1.8"
authors = ["Thong Nguyen <vanthong.nguyen@shodan.io>"]
description = "Official TUI to search and visualize Shodan historical data."
readme = "README.md"
license = "MIT"
edition = "2021"
rust-version = "1.71.0"
repository = "https://github.com/thoongnv/trends-rs"
keywords = ["tui", "cli", "terminal", "dashboard", "shodan"]

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
crossterm = "0.26.1"
dirs = "5.0.1"
human-repr = "1.1.0"
ratatui = { version = "0.22.0" }
serde = {version = "1.0.171", features = ["derive"]}
serde_json = "1.0.103"
ureq = {version = "2.7.1", features = ["tls", "json"]}
url = "2.4.0"

[profile.release]
lto = true
opt-level = 'z'  # Optimize for size.
codegen-units = 1