[package]
name = "strend"
version = "0.2.1"
authors = ["Thong Nguyen <vanthong.nguyen@shodan.io>"]
description = "Official TUI to search and visualize Shodan historical data."
readme = "README.md"
license = "MIT"
edition = "2021"
rust-version = "1.71.0"
repository = "https://github.com/thoongnv/trends-rs"
keywords = ["tui", "cli", "terminal", "dashboard", "shodan"]

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
crossterm = "0.27"
dirs = "5.0.1"
human-repr = "1.1.0"
ratatui = { version = "=0.24.0" }
serde = {version = "1.0.171", features = ["derive"]}
serde_json = "1.0.103"
ureq = {version = "2.8.0", features = ["brotli", "json", "tls", "socks-proxy"]}
url = "2.4.0"
uuid = {version = "1.4.1", features = ["v4"]}

[profile.release]
lto = true
opt-level = 'z'  # Optimize for size.
codegen-units = 1

[dev-dependencies]
mockito = "1.1.0"
unicode-width = "0.1.10"

[package.metadata.generate-rpm]
assets = [
    { source = "target/x86_64-unknown-linux-musl/release/strend", dest = "/usr/bin/strend", mode = "755" },
]
